--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="searchDevices"
-        android:text="搜索设备" />
+        android:text="Scan Devices" />
 
     <ListView
         android:id="@+id/lv_device"
